Adjusted margins and borders for page containers so that they fill up the full screen width at smaller screen sizes, also made h1, h2, and h3 tags not visibly selectable to prevent title text elements from highlighting when long pressing on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -115,6 +115,14 @@ h1, h2, h3 {
   display: none;
 }
 
+body h1, body h2, body h3
+{
+  -webkit-user-select: none; /* Safari */        
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* IE10+/Edge */
+  user-select: none; /* Standard */
+}
+
 
 .headerComponent {
   position: relative;
@@ -524,6 +532,10 @@ h1, h2, h3 {
   border-radius: 1rem;
   filter: drop-shadow(6.7px 6.7px 5.3px rgba(0,0,0,0.3));
   /* border: 5px solid #2B52C1; */
+}
+
+.aboutTitle {
+  margin-bottom: 1rem;
 }
 
 .bioContainer .row {
@@ -1037,6 +1049,8 @@ h1, h2, h3 {
   filter: drop-shadow(6.7px 6.7px 5.3px rgba(0,0,0,0.3));
 }
 
+
+
 #contact-form {
   margin: 0rem 1.5rem 1.5rem 1.5rem;
 }
@@ -1126,6 +1140,34 @@ h1, h2, h3 {
   background-color: white;
   border-radius: 1rem;
   filter: drop-shadow(6.7px 6.7px 5.3px rgba(0,0,0,0.3));
+}
+
+@media screen and (max-width: 430px) {
+  .portfolioContainer {
+    margin-left: 0% !important;
+    margin-right: 0% !important;
+    border-radius: 0rem;
+  }
+
+  .contactContainer, .resumeContainer {
+    border-radius: 0rem;
+    max-width: 100% !important;
+  }
+
+  .contactContainer {
+    padding: 1rem 1.5rem 1.5rem 1.5rem;
+  }
+
+  .aboutContainer {
+    padding-left: 0 !important;
+    padding-right: 0 !important;
+    max-width: 100% !important;
+  }
+
+  .aboutPage {
+    border-radius: 0rem;
+    padding: 1rem 1.5rem 1.5rem 1.5rem;
+  }
 }
 
 .resumePage {
